feat: work with movie service